overlapping to appheader solved

--- a/src/components/appheader/Appheader.module.css
+++ b/src/components/appheader/Appheader.module.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  z-index: 1;
 }
 .text {
   font-size: 50px;
